--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "currency.js": "^2.0.4",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "nest-winston": "^1.9.4",
     "pactum": "^3.5.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -42,7 +43,8 @@
     "prisma-error-enum": "^0.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
